--- a/Exercicios/ex026/mq002/estilo/paisagem.css
+++ b/Exercicios/ex026/mq002/estilo/paisagem.css
@@ -1,2 +1,6 @@
 @charset "UTF-8";
 /*Aparelho deitado (landscape) */
+body {
+    background: url(../img/cev-landscape.jpg);
+    background-position: left bottom;
+}
