--- a/Exercicios/ex026/mq004/estilo/media-query.css
+++ b/Exercicios/ex026/mq004/estilo/media-query.css
@@ -1,7 +1,83 @@
 @charset "UTF-8";
 
+/* 
+    Typical Device Breakpoints
+
+    Pequenas telas: até 600px
+    Celular: de 600px até 768px
+    Tablet:  de 768 até 992px
+    Desktop: de 992px até 1200px
+    Grandes telas: Acima de 1200px
+
+*/
+
 /* Todas as demais midias */
 
+/* Impressora */
 @media print {
-    
+    body {
+        background-image: url(../img/back-print.jpg); /* Desnecessario*/
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    main {
+        width: 100vw;
+        border: 1px solid black;
+    }
+
+    main::after {
+        content: 'Essa impressão foi feita atraves do site www.cursoemvideo.com';
+        text-decoration: overline;
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    img#phone{display: none;}
+    img#tablet{display: none;}
+    img#print{display: block;}
+    img#pc{display: none;}
+    img#tv{display: none;}
+}
+/* Tablet */
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    body {
+        background-image: url(../img/back-tablet.jpg);
+    }
+
+    img#phone{display: none;}
+    img#tablet{display: block;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: none;}
+}
+/* Desktops */
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+    body {
+        background-image: url(../img/back-pc.jpg);
+
+    }
+    img#phone{display: none;}
+    img#tablet{display: none;}
+    img#print{display: none;}
+    img#pc{display: block;}
+    img#tv{display: none;}
+}
+/* Grandes Telas */
+@media screen and (min-width: 1200px) {
+    body {
+        background-image: url(../img/back-tv.jpg);
+    }
+
+    main {
+        width: 700px;
+    }
+
+    img#phone{display: none;}
+    img#tablet{display: none;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: block;}
 }
